chore: initial MVP backbone (auth, workspaces/pages, text blocks)

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,7 @@
 {
   "projects": {
-    "default": "productivity-hub-3785d"
-  }
+    "default": "productivity-hub-a0dc3"
+  },
+  "targets": {},
+  "etags": {}
 }
