--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "clsx": "^2.1.1",
     "firebase": "^12.1.0",
     "next": "15.4.6",
     "react": "19.1.0",
