--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "firebase": "^12.1.0",
+    "firebase-admin": "^13.4.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
