--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.9",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "firebase": "^12.1.0",
     "firebase-admin": "^13.4.0",
+    "graphql": "^16.11.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
